# mcp-python-demo

./: .env.example  README.md  client.py  pyproject.toml  server.py  web_client.py
src/mcp_python_demo/: client.py  server.py
